--- a/src/layouts/styles/LandingPage.module.css
+++ b/src/layouts/styles/LandingPage.module.css
@@ -2,7 +2,7 @@
   font-size: 8rem;
   margin: 2rem;
   opacity: 0;
-  animation: fly-in 1s 0.3s, opacity 1s 0.3s forwards;
+  animation: fly-in 1s 0.3s, opacity-in 1s 0.3s forwards;
 }
 .btn {
   display: flex;
@@ -30,11 +30,11 @@ span {
 
 .btn1 {
   opacity: 0;
-  animation: fly-in 1s 0.2s, opacity 1s 0.2s forwards;
+  animation: fly-in 1s 0.2s, opacity-in 1s 0.2s forwards;
 }
 .btn2 {
   opacity: 0;
-  animation: fly-in 1s 0.1s, opacity 1s 0.1s forwards;
+  animation: fly-in 1s 0.1s, opacity-in 1s 0.1s forwards;
 }
 
 @keyframes findit {
@@ -56,7 +56,7 @@ span {
     opacity: 100%;
   }
 }
-@keyframes opacity {
+@keyframes opacity-in {
   0% {
     opacity: 0%;
   }
@@ -65,7 +65,31 @@ span {
   }
 }
 
+@keyframes fly-out {
+  0% {
+    transform: translateY(0px);
+    opacity: 100%;
+  }
+  100% {
+    transform: translateY(100px);
+    opacity: 0%;
+  }
+}
+
 a {
   text-decoration: unset;
   color: unset;
+}
+
+.logoOut {
+  opacity: 100%;
+  animation: fly-out 1s ease-in 0.2s forwards;
+}
+.btnOut1 {
+  opacity: 100%;
+  animation: fly-out 1s ease-in 0.1s forwards;
+}
+.btnOut2 {
+  opacity: 100%;
+  animation: fly-out 1s ease-in 0s forwards;
 }
