--- a/src/layouts/styles/SignIn.module.css
+++ b/src/layouts/styles/SignIn.module.css
@@ -27,6 +27,8 @@
 
   color: #515151;
   font-size: 2rem;
+  transition: 0.3s transform, 0.3s color, 0.3s box-shadow, 0.3s top, 0.3s bottom,
+    0.3s margin, 0.3s padding, 0.3s font-size, 0.3s border;
 }
 .loginBox .userBox label {
   position: absolute;
@@ -39,7 +41,7 @@
   color: #51515178;
   pointer-events: none;
   transition: 0.3s transform, 0.3s color, 0.3s box-shadow, 0.3s top, 0.3s bottom,
-    0.3s margin, 0.3s padding, 0.3s font-size;
+    0.3s margin, 0.3s padding, 0.3s font-size, 0.3s border;
 }
 .loginBox .userBox input:focus ~ label,
 .loginBox .userBox input:valid ~ label {
@@ -69,8 +71,16 @@
 
   box-shadow: 1px 30px 30px 8px rgba(133, 133, 160, 0.08);
   cursor: pointer;
-  transition: 0.3s transform, 0.3s color, 0.3s box-shadow;
+  transition: 0.3s transform, 0.3s color, 0.3s box-shadow, 0.3s top, 0.3s bottom,
+    0.3s margin, 0.3s padding, 0.3s font-size, 0.3s border;
 }
+.btn:hover {
+  transform: translateY(-5px);
+  box-shadow: 1px 20px 35px 8px rgba(133, 133, 160, 0.05);
+  color: #278f33;
+  border: 3px solid #278f33;
+}
+
 .loginBox .userBox input:focus ~ label,
 .loginBox .userBox input:focus {
   color: #278f33;
@@ -78,4 +88,57 @@
 
 .loginBox .userBox input:focus {
   border-bottom: 3px solid #278f33;
+}
+
+.in1 {
+  opacity: 0%;
+  animation: fly-in 1s 0.3s, opacity-in 1s 0.3s forwards;
+}
+.in2 {
+  opacity: 0%;
+  animation: fly-in 1s 0.2s, opacity-in 1s 0.2s forwards;
+}
+.in3 {
+  opacity: 0%;
+  animation: fly-in 1s 0.1s, opacity-in 1s 0.1s forwards;
+}
+
+@keyframes fly-in {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0%;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 100%;
+  }
+}
+@keyframes opacity-in {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+@keyframes fly-out {
+  0% {
+    transform: translateY(0px);
+    opacity: 100%;
+  }
+  100% {
+    transform: translateY(100px);
+    opacity: 0%;
+  }
+}
+@keyframes fly-out-hover {
+  0% {
+    transform: translateY(-5px);
+    opacity: 100%;
+  }
+  100% {
+    transform: translateY(100px);
+    opacity: 0%;
+  }
 }
