--- a/src/layouts/styles/LandingPage.module.css
+++ b/src/layouts/styles/LandingPage.module.css
@@ -15,17 +15,17 @@
   width: 20rem;
   border-radius: 1rem;
 
-  box-shadow: 1px 15px 30px 8px rgba(133, 133, 160, 0.1);
+  box-shadow: 1px 15px 30px 8px #8585a01a;
   cursor: pointer;
   transition: 0.3s transform, 0.3s color, 0.3s box-shadow;
 }
 span {
-  color: rgb(39, 143, 51);
+  color: #278f33;
 }
 .btn:hover {
   transform: translateY(-5px);
-  box-shadow: 1px 20px 35px 8px rgba(133, 133, 160, 0.07);
-  color: rgb(39, 143, 51);
+  box-shadow: 1px 20px 35px 8px #8585a012;
+  color: #278f33;
 }
 
 .btn1 {
