--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "roboto slab";
-  color: #515151;
+  color: var(--main-color);
 }
 
 body {
@@ -18,5 +18,6 @@ body {
 
   font-size: 2rem;
   font-family: "roboto slab";
-  color: #515151;
+  background-color: var(--background-color);
+  color: var(--main-color);
 }
