--- a/src/layouts/styles/LandingPage.module.css
+++ b/src/layouts/styles/LandingPage.module.css
@@ -20,12 +20,12 @@
   transition: 0.3s transform, 0.3s color, 0.3s box-shadow;
 }
 span {
-  color: #278f33;
+  color: var(--accent-color);
 }
 .btn:hover {
   transform: translateY(-5px);
   box-shadow: 1px 20px 35px 8px #8585a012;
-  color: #278f33;
+  color: var(--accent-color);
 }
 
 .btn1 {
