--- a/src/layouts/styles/SignIn.module.css
+++ b/src/layouts/styles/SignIn.module.css
@@ -29,7 +29,8 @@
   color: var(--main-color);
   font-size: 2rem;
   transition: 0.3s transform, 0.3s color, 0.3s box-shadow, 0.3s top, 0.3s bottom,
-    0.3s margin, 0.3s padding, 0.3s font-size, 0.3s border;
+    0.3s margin, 0.3s padding, 0.3s font-size, 0.3s border,
+    0.3s background-color;
 }
 .loginBox .userBox label {
   position: absolute;
