CHANGE: buttons are now buttons instead of div with onClick ADD: working register mechanism

--- a/src/layouts/styles/CreateAccount.module.css
+++ b/src/layouts/styles/CreateAccount.module.css
@@ -69,6 +69,7 @@
   width: 19rem;
   border: 3px solid var(--main-color);
   border-radius: 1rem;
+  background-color: transparent;
 
   color: var(--main-color) d7;
   font-size: 1.5rem;
