SYNC: i'm not sure... probably the "game panel"

--- a/public/AppDark.css
+++ b/public/AppDark.css
@@ -2,6 +2,7 @@
   --main-color: #fff;
   --accent-color: #2ee0ff;
   --background-color: #1f2833;
+  --background-color-dark: #1b222b;
   --box-shadow: rgba(14, 22, 32, 0.15);
   /* --box-shadow-light: ; */
   --box-shadow-hover: rgba(14, 22, 32, 0.13);
