--- a/src/components/styles/task.module.css
+++ b/src/components/styles/task.module.css
@@ -1,9 +1,11 @@
 .taskTable {
   display: flex;
+  flex-direction: column;
 }
 .task {
+  font-size: 26px;
   display: flex;
 }
 .task div {
-  padding: 10px 30px;
+  padding: 10px 20px;
 }
