--- a/src/layouts/styles/CreateGame.module.css
+++ b/src/layouts/styles/CreateGame.module.css
@@ -1,9 +1,9 @@
 .container {
   display: grid;
   grid-template-columns: 3fr 4fr;
-  grid-template-rows: 16px 3fr 16px 3fr 1fr 6fr;
-  grid-column-gap: 10px;
-  grid-row-gap: 15px;
+  grid-template-rows: 16px 1fr 16px 1fr 0.5fr 6fr;
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
 
   padding: 50px;
 
@@ -65,6 +65,7 @@ input {
   outline: unset;
   border: unset;
   border-radius: 30px;
+  padding-left: 20px;
 }
 button {
   font-family: "Roboto Slab";
@@ -75,4 +76,16 @@ button {
   outline: unset;
   border: unset;
   border-radius: 30px;
+}
+.input {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-dark);
+  outline: unset;
+  border: unset;
+  border-radius: 30px;
+  padding-left: 20px;
 }
