--- a/src/components/styles/question.module.css
+++ b/src/components/styles/question.module.css
@@ -40,6 +40,12 @@ select {
   height: 40px;
   font-size: 16px;
 }
+.answerBLANK {
+  opacity: 0%;
+  width: 480px;
+  height: 40px;
+  font-size: 16px;
+}
 .location {
   width: 220px;
   height: 60px;
